# psy

./: .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  __init__.py  alembic.ini  check_admin.py  config.py  create_test_student.py  crud.py  data_repair_script.py  database.py  deploy.sh  docker-compose.yml  env.example  generate_demo_data.py  init_admin.py  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  schemas.py  security.py  start_app.py  test_acceptance.py  test_client_apis.py  test_fixes.py  test_performance.py  test_startup.py  test_testrecords_fixes.py  改造完成总结.md  标准化改造方案.md  系统使用手册.md  系统启动和使用指南.md  解决方案总结.md  运维手册.md  项目状态分析报告.md
UnityIntegration/: PsychTestAPIClient.cs  PsychTestConfig.cs  PsychTestDataModels.cs  PsychTestExample.cs  PsychTestUtils.cs  README.md  使用总结.md
exports/: 学生数据_20250922_071716.xlsx
psy_admin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
psy_admin_fastapi/: Dockerfile  alembic.ini  check_invalid_student_fk_ids.py  check_table_structure.py  cleanup_empty_test_records.py  config.py  crud.py  database.py  dependencies.py  fix_invalid_student_fk_ids.py  fix_tests_table.py  generate_demo_data.py  init_admin.py  main.py  migrate.py  models.py  psyadmin.db  requirements.txt  reset_admin.py  run_server.py  schemas.py  security.py  simple_server.py  start_server.py  test_jwt.py
psy_admin_vue/: .env.development  Dockerfile  README.md  env.development  env.production  package-lock.json  package.json  vue.config.js
routers/: auth_router.py
services/: report_service.py
tests/: conftest.py  test_api.py  (+8 more)
(+23 files in other folders)
