[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psy_admin"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
description = "Psychological Assessment Administration System"
readme = "README.md"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["psy_admin_fastapi"]
